[project]
name = "md2docs"
description = "Sync local markdown files to your Google Docs"
readme = "README.md"
license = {"text" = "MIT"}
version = "0.0.1"
requires-python = ">=3.7"
authors = [
    { name = "Gavin D'souza", email = "gavin18d@gmail.com" },
]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]
md2docs = "cli:execute_via_cli"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
